--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
     "name": "quality-rating-website",
     "version": "1.0.0",
-    "description": "Cloud-based quality rating prediction web application using Next.js, Firebase, Python ML model (XGBoost).",
-    "main": "next.config.js",
+    "description": "Cloud-based quality rating prediction web application using Next.js, Firebase, and Python ML model (XGBoost).",
     "scripts": {
       "dev": "next dev",
       "build": "next build",
@@ -10,24 +9,24 @@
       "lint": "next lint"
     },
     "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "firebase": "latest",
-    "axios": "latest",
-    "recharts": "latest",
-    "framer-motion": "latest",
-    "jspdf": "^2.5.1",
-    "jspdf-autotable": "latest",
-    "file-saver": "latest"
+      "next": "^14.1.3",
+      "react": "^18.2.0",
+      "react-dom": "^18.2.0",
+      "firebase": "^10.7.1",
+      "axios": "^1.6.7",
+      "recharts": "^2.7.2",
+      "framer-motion": "^10.16.4",
+      "jspdf": "^2.5.1",
+      "jspdf-autotable": "^3.8.0",
+      "file-saver": "^2.0.5"
     },
     "devDependencies": {
-      "typescript": "latest",
-      "eslint": "latest",
-      "eslint-config-next": "latest",
-      "tailwindcss": "latest",
-      "postcss": "latest",
-      "autoprefixer": "latest"
+      "typescript": "^5.4.3",
+      "eslint": "^8.57.0",
+      "eslint-config-next": "^14.1.3",
+      "tailwindcss": "^3.4.3",
+      "postcss": "^8.4.38",
+      "autoprefixer": "^10.4.17"
     },
     "engines": {
       "node": ">=18.x"
